# Gang-of-Four-Design-Patterns

./: CMakeLists.txt  README.md
src/: main.cpp  main.h
src/Behavioural Patterns/Chain of Responsibility/: Handler.cpp  Handler.h
src/Creational Patterns/Abstract Factory/: MedicineManufacturing.cpp  MedicineManufacturing.h
src/Creational Patterns/Builder/: ChessPositions.cpp  ChessPositions.h
src/Creational Patterns/Factory/: Humanoid.cpp  Humanoid.h
src/Creational Patterns/Prototype/: Laptop.cpp  Laptop.h
src/Creational Patterns/Singleton/: AppConfig.cpp  AppConfig.h
src/Structural Patterns/Adapter/: ApiWrapper.cpp  ApiWrapper.h
src/Structural Patterns/Bridge/: HyperCube.cpp  HyperCube.h  TessaractImplementation.cpp  TessaractImplementation.h
src/Structural Patterns/Composite/: Actuator.cpp  Actuator.h
src/Structural Patterns/Decorator/: Interaction.cpp  Interaction.h
src/Structural Patterns/Facade/: UnifiedInterface.cpp  UnifiedInterface.h
src/Structural Patterns/Flyweight/: UserData.cpp  UserData.h
src/Structural Patterns/Proxy/: BankAccount.cpp  BankAccount.h
